tests/typing/bad/testfile-assign-7.c

struct S { int a; };
struct T { int b; };
int main() { struct S s; struct T t; s = t; }
